# user_manager

./: .gitignore  Dockerfile  README.md  database.db  docker-compose.yml  env_sample  pyproject.toml  requirements.txt
application/: app.py  database.py  models.py  redis_conf.py  routers.py  schemas.py  service.py
static/js/: myjs.js
templates/: index.html
